# swap-detector

./: .clang-format  .gitlab-ci.yml  CMakeLists.googletest  CMakeLists.swig  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  sample.db  version.txt
.ci/: run_tests.sh
clang_plugin/: APIExtractor.cpp  CMakeLists.txt  ExprNames.cpp  ExprNames.h  ExprNames.hpp  ExprNamesInspectionChecker.cpp  ExprNamesInspectionChecker.hpp  Plugin.cpp  SwappedArgChecker.cpp  SwappedArgChecker.h  SwappedArgCheckerPlugin.cpp  SwappedArgCheckerPlugin.hpp
clang_plugin/test/: CMakeLists.txt  ast_names.cpp  cover.c  lit.cfg.py  lit.site.cfg.in  stats.c  test.db
include/: Compiler.hpp  IdentifierSplitting.hpp  SwappedArgChecker.hpp
python/: PyOwnedObject.hpp  SwappedArgsExt.cpp  setup.py
python/tests/: test_swappedargs.py
src/: CMakeLists.txt  IdentifierSplitting.cpp  SwappedArgChecker.cpp
swig/: CMakeLists.txt
swig/python/: CMakeLists.txt  identifier_splitting.i  main.i  swapped_arg_checker.i
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt  Checker.test.cpp  Foo.test.cpp  IdentifierSplitting.test.cpp  main.cpp
test/integration/: CMakeLists.txt  integration_test_runner.py  main.cpp  names_subset.json
